part-2/2.08/todo-backend/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-backend-ing
  namespace: project
spec:
  rules:
    - host: todo-backend.localtest.me
      http:
        paths:
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todo-backend-svc
                port:
                  number: 80
